--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MongoDB Connection URI
-MONGO_URI=mongodb+srv://coolcare:Qhhc3qf84bYpzG7p@coolcare.7mekzx0.mongodb.net/?retryWrites=true&w=majority&appName=coolcare
+MONGO_URI=mongodb+srv://yktrader:gtHWzCoraOEiEPRO@yktraders.rrr3ybh.mongodb.net/?appName=YKtraders
 JWT_SECRET=your_super_secret_jwt_key
 
 Gmail SMTP Configuration for Nodemailer
@@ -7,4 +7,4 @@ EMAIL_USER=coolcare.auth@gmail.com
 EMAIL_PASS=kxkd tojh fvxh eqcz
 
 
-ADMIN_PASS=9981156703
+ADMIN_PASS=Traders@2021
